ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/Land_Holding_Detail__c.object-meta.xml
<CustomObject>
    <label>Land Holding Detail</label>
    <nameField>
        <displayFormat>LHD-{00000}</displayFormat>
        <label>Land Holding Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land Holding Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>