ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Approximate_value_of_Agri_Land__c.field-meta.xml
<CustomField>
    <fullName>Approximate_value_of_Agri_Land__c</fullName>
    <label>Approximate value of Agri Land</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>