ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/District_Master__c.field-meta.xml
<CustomField>
    <fullName>District_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>District Master</label>
    <referenceTo>District_Master__c</referenceTo>
    <relationshipName>Loan_Holding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>