ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Geo_State_Master__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geo State Master</label>
    <referenceTo>Geo_State_Masters__c</referenceTo>
    <relationshipLabel>Land Holding Details</relationshipLabel>
    <relationshipName>Land_Holding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>