ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Land_holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Land_holder_Name__c</fullName>
    <label>Land holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>