ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Land_holding_In_acres__c.field-meta.xml
<CustomField>
    <fullName>Land_holding_In_acres__c</fullName>
    <label>Land holding In acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>