ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Proof_attached__c.field-meta.xml
<CustomField>
    <fullName>Proof_attached__c</fullName>
    <label>Proof attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>