ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Since_How_long_are_they_doing_Agricultu__c.field-meta.xml
<CustomField>
    <fullName>Since_How_long_are_they_doing_Agricultu__c</fullName>
    <label>Since, How long are they doing Agricultu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>