ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Taluka_Master__c.field-meta.xml
<CustomField>
    <fullName>Taluka_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Taluka Master</label>
    <referenceTo>Taluka_Master__c</referenceTo>
    <relationshipName>Loan_Holding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>