ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Unmarried Daughter</fullName>
            </value>
            <value>
                <fullName>Unmarried Sister</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Farming Friend</fullName>
            </value>
            <value>
                <fullName>Villagers</fullName>
            </value>
            <value>
                <fullName>Neighbours</fullName>
            </value>
            <value>
                <fullName>Lease Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>