ProdIND/ProdPrograms/force-app/main/default/objects/Land_Holding_Detail__c/fields/Village_Name__c.field-meta.xml
<CustomField>
    <fullName>Village_Name__c</fullName>
    <label>Village Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>